--- a/jazz-club/style.css
+++ b/jazz-club/style.css
@@ -967,3 +967,84 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+
+/*Custom CSS code is placed here*/
+
+@font-face {
+  font-family: Bellerose;
+  src: url(Fonts/Bellerose.ttf);
+}
+
+@font-face {
+  font-family: ParkLaneNF;
+  src: url("Fonts/ParkLaneNF.otf");
+}
+
+
+.site-header {
+	background-image: url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background-e1651819680357.png");
+	margin-top: -22px;
+	overflow: hidden;
+	height: 120px;	
+}
+
+.main-navigation {
+	padding-top: 20px;
+	padding-bottom: 1px;
+	width: 60%;
+	margin-right: -180px;
+	height:75px;
+	float: right;
+}
+
+.main-navigation li {
+	margin-right: 40px;
+	font-family: Bellerose;
+	font-size: 1.3em;
+	margin-top: 20px;
+	width: 90px;
+	height: 75px;	
+}
+
+
+.site-branding{
+	width:40%;
+	float: left;
+	text-align: left;
+	margin-top: 10px;
+}
+
+.custom-logo {
+	margin-top: 23px;
+	margin-left: 10px;
+	border:3px solid #000;
+	display: inline-block;
+	position: relative;
+		
+}
+
+/* Clickable link with website name next to logo*/
+.site-title{
+	font-family: ParkLaneNF;
+	font-size: 2em;
+	color: black;
+	display: inline-block;
+	position: fixed;
+	margin-left: 27px;
+	margin-top: 35px;
+	
+}
+
+.site-footer{
+	background-image:url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background-e1651821510228.png");
+	height:120px;
+	
+}
+
+
+
+a, a:visited{
+	color: #1d2327;
+	text-decoration: none;
+}
