--- a/jazz-club/style.css
+++ b/jazz-club/style.css
@@ -969,7 +969,9 @@ textarea {
 }
 
 
-/*Custom CSS code is placed here*/
+
+/*Custom CSS code is placed here
+___________________________________________________________________*/
 
 @font-face {
   font-family: Bellerose;
@@ -983,10 +985,11 @@ textarea {
 
 
 .site-header {
-	background-image: url("Images/navbar-background.png");
+	background-image: url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background-e1651819680357.png");
 	margin-top: -22px;
 	overflow: hidden;
-	height: 120px;	
+	height: 110px;	
+	
 }
 
 .main-navigation {
@@ -1030,17 +1033,17 @@ textarea {
 	font-size: 2em;
 	color: black;
 	display: inline-block;
-	position: fixed;
+	position: absolute;
 	margin-left: 27px;
 	margin-top: 35px;
 	
 }
 
 .site-footer{
-	background-image:url("Images/navbar-background.png")
-	height:120px;
-	
+	background-image:url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background-e1651821510228.png");
+	height: 140px;
 }
+
 
 
 
@@ -1048,3 +1051,40 @@ a, a:visited{
 	color: #1d2327;
 	text-decoration: none;
 }
+
+.menuicons_1{
+	background-image: url('http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/Facebook-e1652013578899.png');
+	background-repeat: no-repeat;
+	background-position: above;
+	height: 50px;
+}
+
+.menuicons_2{
+	background-image: url('http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/instagram-e1652013592391.png');	
+	background-repeat: no-repeat;
+	background-position: above;
+	height: 50px;
+}
+
+.menu{
+	margin-top: 5px;
+	float: left;
+	position: absolute;
+	margin-left: 15px;
+}
+
+.menu li{
+	float:left;
+	width: 90px;
+}
+
+.site-info{
+	width: 60%;
+	padding-top: 60px;
+	
+}
+
+.socials{
+	margin-left: 5px;
+}
+
