--- a/jazz-club/style.css
+++ b/jazz-club/style.css
@@ -1,5 +1,5 @@
 /*!
-Theme Name: Jazz Club
+Theme Name: TownsvilleJazz
 Theme URI: http://underscores.me/
 Author: Underscores.me
 Author URI: http://underscores.me/
@@ -9,13 +9,13 @@ Tested up to: 5.4
 Requires PHP: 5.6
 License: GNU General Public License v2 or later
 License URI: LICENSE
-Text Domain: jazz-club
+Text Domain: townsvillejazz
 Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
 
-Jazz Club is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
+TownsvilleJazz is based on Underscores https://underscores.me/, (C) 2012-2020 Automattic, Inc.
 Underscores is distributed under the terms of the GNU GPL v2 or later.
 
 Normalizing styles have been helped along thanks to the fine work of
@@ -402,8 +402,8 @@ input,
 select,
 optgroup,
 textarea {
-	color: #404040;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+	color: #000000;
+	font-family: BelleRose;
 	font-size: 1rem;
 	line-height: 1.5;
 }
@@ -533,7 +533,7 @@ table {
 /* Links
 --------------------------------------------- */
 a {
-	color: #4169e1;
+	color: #000000;
 }
 
 a:visited {
@@ -648,15 +648,16 @@ textarea {
 /* Navigation
 --------------------------------------------- */
 .main-navigation {
-	display: block;
+	display:block;
 	width: 100%;
+	
 }
 
 .main-navigation ul {
 	display: none;
 	list-style: none;
-	margin: 0;
-	padding-left: 0;
+	margin: 20;
+	padding-left: 50;
 }
 
 .main-navigation ul ul {
@@ -867,7 +868,7 @@ textarea {
 }
 
 .gallery-columns-9 {
-	grid-template-columns: repeat(9, 1fr);
+	grid-template-columns: repeat(9, 01fr);
 }
 
 .gallery-caption {
@@ -968,14 +969,11 @@ textarea {
 	margin-bottom: 1.5em;
 }
 
-<<<<<<< Updated upstream
 
 
-/*Custom CSS code is placed here
-___________________________________________________________________*/
-=======
+
+
 /*Custom CSS code is placed here*/
->>>>>>> Stashed changes
 
 @font-face {
   font-family: Bellerose;
@@ -1045,14 +1043,11 @@ ___________________________________________________________________*/
 
 .site-footer{
 	background-image:url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background-e1651821510228.png");
-	height: 140px;
-<<<<<<< Updated upstream
-=======
-	
+	overflow: hidden;
+	height:auto;
 	width: 100%;
 	
 
->>>>>>> Stashed changes
 }
 
 
@@ -1077,8 +1072,6 @@ a, a:visited{
 	height: 50px;
 }
 
-<<<<<<< Updated upstream
-=======
 .menuicons_3{
 	background-image: url('http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/mail-1-e1652057890656.png');	
 	background-repeat: no-repeat;
@@ -1087,16 +1080,12 @@ a, a:visited{
 }
 
 
->>>>>>> Stashed changes
 .menu{
 	margin-top: 5px;
 	float: left;
 	position: absolute;
 	margin-left: 15px;
-<<<<<<< Updated upstream
-=======
 	margin-bottom: 5px;
->>>>>>> Stashed changes
 }
 
 .menu li{
@@ -1104,21 +1093,28 @@ a, a:visited{
 	width: 90px;
 }
 
+.footer-container{
+	float:left;
+}
+
+.footer-menu{
+	float:left;
+}
+
 .site-info{
-	width: 60%;
-	padding-top: 60px;
-	
+	padding-top: 140px;	
 }
 
 .socials{
 	margin-left: 5px;
 }
 
-<<<<<<< Updated upstream
-=======
 .site-contact{
 	float: right;
-	width:40%;
-	
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	background-color: #737c77;
 }
->>>>>>> Stashed changes
