--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -967,3 +967,73 @@ textarea {
 	margin-right: auto;
 	margin-bottom: 1.5em;
 }
+
+
+
+/*
+CUSTOM CODE HERE
+____________________________________________________________________
+*/
+
+
+/*
+HEADER
+*/
+
+.site-header {
+	background-image: url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background.png");
+	margin-top: -22px;
+	overflow: hidden;
+	height: 110px;	
+}
+
+/*
+Top Navigation Menu */
+
+.main-navigation {
+	padding-top: 20px;
+	padding-bottom: 1px;
+	width: 60%;
+	margin-right: -180px;
+	height:75px;
+	float: right;
+}
+
+.main-navigation li {
+	margin-right: 40px;
+	font-family: Bellerose;
+	font-size: 1.3em;
+	margin-top: 20px;
+	width: 90px;
+	height: 75px;	
+}
+
+
+/* Site Logo and title - nested in site-branding */
+
+.site-branding{
+	width:40%;
+	float: left;
+	text-align: left;
+	margin-top: 10px;
+}
+
+.custom-logo {
+	margin-top: 23px;
+	margin-left: 10px;
+	border:3px solid #000;
+	display: inline-block;
+	position: relative;
+		
+}
+
+.site-title{
+	font-family: ParkLaneNF;
+	font-size: 2em;
+	color: black;
+	display: inline-block;
+	position: absolute;
+	margin-left: 27px;
+	margin-top: 35px;
+	
+}
