--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -985,6 +985,7 @@ HEADER
 	margin-top: -22px;
 	overflow: hidden;
 	height: 110px;	
+	
 }
 
 /*
@@ -997,6 +998,7 @@ Top Navigation Menu */
 	margin-right: -180px;
 	height:75px;
 	float: right;
+	
 }
 
 .main-navigation li {
@@ -1006,6 +1008,7 @@ Top Navigation Menu */
 	margin-top: 20px;
 	width: 90px;
 	height: 75px;	
+	
 }
 
 
@@ -1016,6 +1019,7 @@ Top Navigation Menu */
 	float: left;
 	text-align: left;
 	margin-top: 10px;
+	
 }
 
 .custom-logo {
@@ -1060,3 +1064,42 @@ FOOTER
 	float:left;
 	
 }
+
+/* built by wordpress info */
+.site-info{
+	padding-top: 140px;	
+}
+
+
+/* social media menu in footer */
+.socials{
+	margin-left: 5px;
+	
+}
+
+.menu{
+	margin-top: 5px;
+	float: left;
+	position: absolute;
+	margin-left: 15px;
+	margin-bottom: 5px;
+	
+}
+
+.menu li{
+	float:left;
+	width: 90px;
+	
+}
+
+.site-contact{
+	float: right;
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-bottom: 10px;
+	padding-right: 20px;
+	padding-left: 20px;
+	background-color: #737c77;
+	
+}
+
