Update CSS - hide metadata
This commit hides post metadata like author name and date as well as changes the colour of the menu links when clicked.

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1142,3 +1142,15 @@ FOOTER
 	
 }
 
+a, a:visited{
+	color: #1d2327;
+	text-decoration: none;
+}
+
+.post-meta{
+	display:none;
+}
+
+-post-tags{
+	display: none;
+}
