--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1000,43 +1000,34 @@ HEADER
 	display: none;
 }
 
+#site-navigation {
+	text-align: center;
+	height: 4em;
+}
+
 /*
 Top Navigation Menu
 */
 
 
-/*
-.main-navigation {
-	padding-top: 20px;
-	padding-bottom: 1px;
-	width: 60%;
-	margin-right: -180px;
-	height:75px;
-	float: right;
-	
-}
-
-.main-navigation li {
-	margin-right: 40px;
+#primary-menu li {
 	font-family: Bellerose;
 	font-size: 1.3em;
-	margin-top: 20px;
-	width: 90px;
-	height: 75px;	
-	
+	display: inline-block;
+	padding: 0em 1em 0em 1em;
+	margin-top: 1.1em;
 }
- */
 
-/* Site Logo and title - nested in site-branding 
+
+/* Site Logo and title */
 
 .site-branding{
 	width:40%;
 	float: left;
 	text-align: left;
 	margin-top: 10px;
-	
 }
-*/
+
 
 .site-title{
 	font-family: ParkLaneNF;
@@ -1050,7 +1041,6 @@ Top Navigation Menu
 }
 
 /* BODY */
-
 
 .entry-content{
 	margin: auto; 
