Update main content top padding

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1030,7 +1030,8 @@ ____________________________________________________________________ */
 
 .entry-content {
 	margin: auto; 
-	max-width: 70%; 
+	max-width: 70%;
+	padding-top: 1em;
 }
 
 /* Footer */
