Update width for entire site

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -974,6 +974,12 @@ textarea {
 							Jazz Club custom CSS
 ____________________________________________________________________ */
 
+/* Affects all wordpress ages*/
+.site-main {
+	width: 70%;
+	margin: auto;
+}
+
 /* FONTS */
 
 @font-face {
