--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1163,6 +1163,7 @@ figure {
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 			#000, -1px 0 0 #000;
 }
 
+
 /*Black text on Gallery page*/
 
 .page-id-158 figure {
@@ -1171,6 +1172,11 @@ figure {
 }
 
 /* Newsletter page */
+#wpforms-150 {
+   width: 50%;
+   /*position: relative;
+   left: -25%;*/
+}
 
 .page-id-452 .entry-content h2 {
    text-align: center;
