Update header image

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1055,7 +1055,7 @@ ____________________________________________________________________ */
 /* Footer */
 
 .site-footer {
-	background-image:url("http://localhost/TownsvilleJazzClub/wordpress/wp-content/uploads/2022/05/navbar-background.png");
+	background-image:url("http://stagingtownsvillejazzclub.paperback-books.com/wp-content/uploads/2022/05/header_image.png");
 	background-position: center;
 	overflow: hidden;
 	height:auto;
