Update header background

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -995,7 +995,7 @@ ____________________________________________________________________ */
 /* Header */
 
 .site-header {
-	background-image: url("https://localhost/Assignment_2/cp3402-2022-1-site-team10/Wordpress/wp-content/uploads/2022/05/header_background.png");
+	background-image: url("http://stagingtownsvillejazzclub.paperback-books.com/wp-content/uploads/2022/05/header_image.png");
 	height: 5em;
 }
 
