--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -66,7 +66,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
-html {
+ html {
 	line-height: 1.15;
 	-webkit-text-size-adjust: 100%;
 }
@@ -1006,7 +1006,6 @@ ____________________________________________________________________ */
 #site-navigation {
 	text-align: center;
 	height: 4em;
-	vertical-align: middle;
 }
 
 /* Top Navigation Menu */
@@ -1025,7 +1024,7 @@ ____________________________________________________________________ */
 .menu-item {
 	display: inline-block;
 	padding: 0em 1em 0em 1em;
-	margin-top: 1.1em;
+	margin-top: .8em;
 }
 
 
@@ -1162,7 +1161,6 @@ figure {
 	color: #fff;
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 			#000, -1px 0 0 #000;
 }
-
 
 /*Black text on Gallery page*/
 
