Revert "Remove wpforms width on newsletter"
This reverts commit 9a2e0d2d7ae6651a3a06ff7967c44cec15e9e6b5.

--- a/Wordpress/wp-content/themes/jazz-club/style.css
+++ b/Wordpress/wp-content/themes/jazz-club/style.css
@@ -1171,6 +1171,11 @@ figure {
 }
 
 /* Newsletter page */
+#wpforms-528 {
+   width: 50%;
+   /*position: relative;
+   left: -25%;*/
+}
 
 .wpforms-container.wpf-center {
 	margin: 0 auto !important;
