--- a/Wordpress/wp-content/themes/Townsville Jazz Club/style.css
+++ b/Wordpress/wp-content/themes/Townsville Jazz Club/style.css
@@ -1029,7 +1029,7 @@ ____________________________________________________________________ */
 
 .site-branding {
 	position: absolute;
-	top: 2.3em;
+	top: .3em;
 	left: 1em;
 }
 
